[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/HuePicker/HuePicker.gd" type="Script" id=1]
[ext_resource path="res://addons/HuePicker/icon.png" type="Texture" id=2]
[ext_resource path="res://addons/HuePicker/Hue Circle.gd" type="Script" id=3]
[ext_resource path="res://addons/HuePicker/sat_val.shader" type="Shader" id=4]
[ext_resource path="res://addons/HuePicker/xor.shader" type="Shader" id=5]
[ext_resource path="res://addons/HuePicker/indicator.png" type="Texture" id=6]
[ext_resource path="res://addons/HuePicker/indicator_rgba.gd" type="Script" id=7]
[ext_resource path="res://addons/HuePicker/checkerboard.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = false
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border Width", "Shadow" ]

[sub_resource type="ShaderMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
shader = ExtResource( 4 )
shader_param/hue = 0.0

[sub_resource type="ShaderMaterial" id=3]

render_priority = 0
shader = ExtResource( 5 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[node name="HuePicker" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse", "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 2 )
}
color = Color( 1, 1, 1, 1 )

[node name="Hue Circle" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Mouse", "Rect" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="PanelContainer" parent="Hue Circle" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.5923
margin_top = 56.5923
margin_right = 200.592
margin_bottom = 200.592
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "Mouse", "custom_styles" ]

[node name="SatVal" type="PanelContainer" parent="Hue Circle/ColorRect" index="0"]

material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 144.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="indicator_sv" type="Sprite" parent="Hue Circle/ColorRect" index="1"]

material = SubResource( 3 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Material" ]

[node name="indicator_h" type="PanelContainer" parent="Hue Circle" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 110.2
margin_top = 113.0
margin_right = 120.2
margin_bottom = 143.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 5, 15 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 4 )
_sections_unfolded = [ "Mouse", "Rect", "custom_styles" ]

[node name="indicator_rgba" type="PanelContainer" parent="Hue Circle" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 224.0
margin_right = 32.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 5 )
script = ExtResource( 7 )
_sections_unfolded = [ "Anchor", "Rect", "custom_styles" ]

[node name="bg" type="Sprite" parent="Hue Circle/indicator_rgba" index="0"]

position = Vector2( 16, 16 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="ColorRect" type="ColorRect" parent="Hue Circle/indicator_rgba" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 31.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse" ]

[node name="Pop" type="PopupPanel" parent="Hue Circle/indicator_rgba" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 307.0
margin_bottom = 443.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false

[node name="ColorPicker" type="ColorPicker" parent="Hue Circle/indicator_rgba/Pop" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = true
raw_mode = false

[connection signal="color_changed" from="." to="." method="_on_HuePicker_color_changed"]

[connection signal="resized" from="." to="." method="_on_HuePicker_resized"]

[connection signal="color_changed" from="Hue Circle/indicator_rgba/Pop/ColorPicker" to="." method="_on_ColorPicker_color_changed"]


